WIP: More complete handling
